# Timecalc

./: CMakeLists.txt  README.md
cpp/: CMakeLists.txt
cpp/src/: main.cpp  time_calc.cpp  time_calc.h
rs/: Cargo.toml
rs/src/: main.rs  timeCalc.rs
src/: main.cpp  time_calc.cpp  time_calc.h
